--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -766,7 +766,7 @@ BMAKEENV=	INSTALL="sh ${.CURDIR}/tools/install.sh" \
 		MAKEFLAGS="-m ${.CURDIR}/tools/build/mk ${.MAKEFLAGS}"
 # need to keep this in sync with targets/pseudo/bootstrap-tools/Makefile
 BSARGS= 	DESTDIR= \
-		OBJTOP='${WORLDTMP}/obj-tools' \
+		OBJTOP='${OBJTOP}/obj-tools' \
 		OBJROOT='$${OBJTOP}/' \
 		UNIVERSE_TOOLCHAIN_PATH=${UNIVERSE_TOOLCHAIN_PATH} \
 		MAKEOBJDIRPREFIX= \
@@ -836,7 +836,7 @@ KTMAKE=		${TIME_ENV} \
 		TOOLS_PREFIX=${TOOLS_PREFIX_UNDEF:U${WORLDTMP}} \
 		${KTMAKEENV} ${MAKE} ${WORLD_FLAGS} -f Makefile.inc1 \
 		DESTDIR= \
-		OBJTOP='${WORLDTMP}/obj-kernel-tools' \
+		OBJTOP='${OBJTOP}/obj-kernel-tools' \
 		OBJROOT='$${OBJTOP}/' \
 		UNIVERSE_TOOLCHAIN_PATH=${UNIVERSE_TOOLCHAIN_PATH} \
 		MAKEOBJDIRPREFIX= \
