Cirrus-CI: update submodules
We install the git-lite package because it seems Cirrus uses an
internal git client to do the inital fetch.

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -153,6 +153,10 @@ task:
   - chown user:user /usr/obj/$(pwd -P)
   - su user -c "git config --global --add safe.directory $(pwd -P)"
 
+  submodules_script:
+  - git submodule init
+  - git submodule update
+
   build_world_script:
   - su user -c "make -j$(sysctl -n hw.ncpu) ${EXTRA_MAKE_FLAGS} CROSS_TOOLCHAIN=${TOOLCHAIN} WITHOUT_TOOLCHAIN=yes buildworld"
 
