connect drm-kmod to the build
only on i386/amd64

--- a/sys/modules/Makefile
+++ b/sys/modules/Makefile
@@ -101,6 +101,7 @@ SUBDIR=	\
 	${_dpdk_lpm4} \
 	${_dpdk_lpm6} \
 	${_dpms} \
+	${_drm_kmod} \
 	dummymbuf \
 	dummynet \
 	${_dwwdt} \
@@ -736,6 +737,7 @@ _cardbus=	cardbus
 _cbb=		cbb
 _cpuctl=	cpuctl
 _cpufreq=	cpufreq
+_drm_kmod=	drm-kmod
 _dpms=		dpms
 _em=		em
 _et=		et
