--- a/libexec/rc/rc.conf
+++ b/libexec/rc/rc.conf
@@ -673,7 +673,7 @@ sysvipc_enable="NO"	# Load System V IPC primitives at startup (or NO).
 linux_enable="NO"	# Linux binary compatibility loaded at startup (or NO).
 linux_mounts_enable="YES" # If linux_enable is set to YES, mount Linux-specific
 			# filesystems at startup.
-clear_tmp_enable="NO"	# Clear /tmp at startup.
+clear_tmp_enable="YES"	# Clear /tmp at startup.
 clear_tmp_X="YES" 	# Clear and recreate X11-related directories in /tmp
 ldconfig_insecure="NO"	# Set to YES to disable ldconfig security checks
 ldconfig_paths="/usr/lib/compat ${_localbase}/lib ${_localbase}/lib/compat/pkg"
