--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -163,7 +163,7 @@ task:
   - su user -c "make CROSS_TOOLCHAIN=${TOOLCHAIN} WITHOUT_TOOLCHAIN=yes packages"
 
   package_check_script:
-  - su user -c "/usr/libexec/flua tools/pkgbase/metalog_reader.lua -c /usr/obj/$(pwd -P)/${TARGET}.${TARGET_ARCH}/worldstage/METALOG"
+  - su user -c "/usr/libexec/flua tools/pkgbase/metalog_reader.lua -c /usr/obj/$(pwd -P)/${TARGET}.${TARGET_ARCH}/stage/METALOG"
 
   test_script:
   - sh .cirrus-ci/pkg-install.sh qemu-nox11
