--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -145,6 +145,7 @@ task:
   messages_script:
   - cat /var/log/messages
   install_script:
+  - sed -i.bak -e 's?pkg+http://pkg.FreeBSD.org/\${ABI}/quarterly?pkg+http://pkg.FreeBSD.org/\${ABI}/latest?' /etc/pkg/FreeBSD.conf
   - sh .cirrus-ci/pkg-install.sh git-lite
   setup_script:
   - uname -a
