--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -171,7 +171,7 @@ task:
   - su user -c "make WITHOUT_TOOLCHAIN=yes packages"
 
   package_check_script:
-  - su user -c "/usr/libexec/flua tools/pkgbase/metalog_reader.lua -c /usr/obj/$(pwd -P)/${TARGET}.${TARGET_ARCH}/stage/METALOG"
+  - su user -c "/usr/libexec/flua tools/pkgbase/metalog_reader.lua -v -c /usr/obj/$(pwd -P)/${TARGET}.${TARGET_ARCH}/stage/METALOG"
 
   cat_metalog_script:
   - cat /usr/obj/$(pwd -P)/${TARGET}.${TARGET_ARCH}/stage/METALOG
