--- a/release/Makefile
+++ b/release/Makefile
@@ -365,6 +365,7 @@ bootonly-bootonly bootonly-memstick: bootonly
 release.iso: disc1.iso
 disc1.iso: disc1-disc1
 	cd disc1-disc1 && sh ${.CURDIR}/${TARGET}/mkisoimages.sh -b ${VOLUME_LABEL}_CD ../${.TARGET} ./METALOG ${XTRADIR}
+	@echo "$(pwd)/disc1/${.TARGET} built"
 
 dvd1.iso: dvd pkg-stage
 	cd dvd && sh ${.CURDIR}/${TARGET}/mkisoimages.sh -b ${VOLUME_LABEL}_DVD ../${.TARGET} ./METALOG ${XTRADIR}
