--- a/rescue/rescue/Makefile
+++ b/rescue/rescue/Makefile
@@ -175,13 +175,13 @@ CRUNCH_LIBS+= -lmd
 CRUNCH_LIBS+= -lmt -lsbuf -lufs -lz
 
 .if ${MACHINE_CPUARCH} == "i386"
-CRUNCH_PROGS_sbin+= bsdlabel fdisk
+CRUNCH_PROGS_sbin+= bsdlabel
 CRUNCH_ALIAS_bsdlabel= disklabel
 #CRUNCH_LIBS+= -lsmb
 .endif
 
 .if ${MACHINE_CPUARCH} == "amd64"
-CRUNCH_PROGS_sbin+= bsdlabel fdisk
+CRUNCH_PROGS_sbin+= bsdlabel
 CRUNCH_ALIAS_bsdlabel= disklabel
 .endif
 
