libcbor: ignore unknown #pragmas for GCC
The GCC build failed with "error: ignoring '#pragma clang diagnostic'"
building libcbor.

Sponsored by:	The FreeBSD Foundation
Differential Revision:

--- a/lib/libcbor/Makefile
+++ b/lib/libcbor/Makefile
@@ -28,6 +28,9 @@ SRCS+=	cbor/internal/unicode.c
 
 CFLAGS+= -I${DIST}/src -I${.CURDIR}
 
+# GCC complains about #pragma clang diagnostic push
+CFLAGS.gcc+= -Wno-error=unknown-pragmas
+
 WARNS?=	2
 IGNORE_PRAGMA=
 MAN=
