--- a/etc/mtree/BSD.usr.dist
+++ b/etc/mtree/BSD.usr.dist
@@ -284,6 +284,10 @@
             ..
             csh
             ..
+            dhcpcd tags=package=dhcpcd
+                hooks tags=package=dhcpcd
+                ..
+            ..
             diskless
             ..
             dma
