--- a/libexec/rc/rc.conf
+++ b/libexec/rc/rc.conf
@@ -144,6 +144,10 @@ background_dhclient="NO"	# Start dhcp client in the background.
 dhclient_arpwait="YES"		# Wait for ARP resolution
 synchronous_dhclient="NO"	# Start dhclient directly on configured
 				# interfaces during startup.
+dhcpcd_enable="NO"		# Set to YES to run dhcpcd in master mode.
+dhcpcd_program="/sbin/dhcpcd"	# Path to dhcpcd program.
+dhcpcd_flags=""			# Extra flags to pass to dhcpcd.
+#dhcpcd_flags_em0=""		# dhcpcd flags for em0 only (overrides dhcpcd_flags).
 defaultroute_delay="30"		# Time to wait for a default route on a DHCP interface.
 defaultroute_carrier_delay="5"	# Time to wait for carrier while waiting for a default route.
 netif_enable="YES"		# Set to YES to initialize network interfaces
