--- a/libexec/rc/rc.d/Makefile
+++ b/libexec/rc/rc.d/Makefile
@@ -91,6 +91,10 @@ CONFGROUPS+=		DHCLIENT
 DHCLIENT=		dhclient
 DHCLIENTPACKAGE=	dhclient
 
+CONFGROUPS+=		DHCPCD
+DHCLIENT=		dhcpcd
+DHCLIENTPACKAGE=	dhcpcd
+
 CONFGROUPS+=		GEOM
 GEOM=			geli \
 			geli2 \
