--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -2031,7 +2031,7 @@ update-packages: .PHONY
 	${_+_}${MAKE} -C ${.CURDIR} ${PKGMAKEARGS} real-update-packages
 
 package-pkg: .PHONY
-	rm -rf /tmp/ports.${TARGET} || :
+	rm -rf /tmp/ports.${TARGET}
 	env ${WMAKEENV:Q} SRCDIR=${.CURDIR} PORTSDIR=${PORTSDIR} REVISION=${_REVISION} \
 		PKG_CMD=${PKG_CMD} PKG_VERSION=${PKG_VERSION} REPODIR=${REPODIR} \
 		WSTAGEDIR=${WSTAGEDIR} \
@@ -2112,7 +2112,7 @@ create-packages-source:	_pkgbootstrap _repodir .PHONY
 create-packages: .PHONY create-packages-world create-packages-kernel create-packages-source
 
 create-source-src-package: _pkgbootstrap .PHONY
-	rm -f ${SSTAGEDIR}/src.plist 2>/dev/null || :
+	rm -f ${SSTAGEDIR}/src.plist
 .if !empty(GIT_CMD) && exists(${GIT_CMD}) && exists(${SRCDIR}/.git)
 	@cd ${SRCDIR}; \
 		( echo "@override_prefix /usr/src" ;  \
@@ -2138,7 +2138,7 @@ create-source-src-package: _pkgbootstrap .PHONY
 .endif
 
 create-source-src-sys-package: _pkgbootstrap .PHONY
-	rm -f ${SSTAGEDIR}/src-sys.plist 2>/dev/null || :
+	rm -f ${SSTAGEDIR}/src-sys.plist
 .if !empty(GIT_CMD) && exists(${GIT_CMD}) && exists(${SRCDIR}/.git)
 	@cd ${SRCDIR}; \
 		( echo "@override_prefix /usr/src" ; \
@@ -2166,7 +2166,7 @@ create-source-src-sys-package: _pkgbootstrap .PHONY
 create-source-packages: .PHONY _pkgbootstrap create-source-src-package create-source-src-sys-package
 
 create-world-packages:	_pkgbootstrap .PHONY
-	@rm -f ${WSTAGEDIR}/*.plist 2>/dev/null || :
+	@rm -f ${WSTAGEDIR}/*.plist
 	@cd ${WSTAGEDIR} ; \
 		${METALOG_SORT_CMD} ${WSTAGEDIR}/${DISTDIR}/METALOG | \
 		awk -f ${SRCDIR}/release/scripts/mtree-to-plist.awk
