libc: Move disktab here from sbin/bsdlabel
bsdlabel is deprecated, but /etc/disktab is still used by libc's
getdiskbyname(3) and some utilities.

Sponsored by:	The FreeBSD Foundation
Differential Revision:

--- a/lib/libc/gen/Makefile.inc
+++ b/lib/libc/gen/Makefile.inc
@@ -1,7 +1,7 @@
 # machine-independent gen sources
 .PATH: ${LIBC_SRCTOP}/${LIBC_ARCH}/gen ${LIBC_SRCTOP}/gen ${SRCTOP}/etc
 
-CONFS+=	group master.passwd shells
+CONFS+=	disktab group master.passwd shells
 CONFSMODE_master.passwd=	600
 CONFSPACKAGE=   runtime
 
