Cirrus-CI: Add XXX note

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -173,6 +173,7 @@ task:
   package_check_script:
   - su user -c "/usr/libexec/flua tools/pkgbase/metalog_reader.lua -v -c /usr/obj/$(pwd -P)/${TARGET}.${TARGET_ARCH}/stage/METALOG"
 
+  # XXX this is not run if the above fails
   cat_metalog_script:
   - cat /usr/obj/$(pwd -P)/${TARGET}.${TARGET_ARCH}/stage/METALOG
 
