--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -2100,8 +2100,8 @@ create-packages-world:	_pkgbootstrap _repodir .PHONY
 create-packages-kernel:	_pkgbootstrap _repodir .PHONY
 	${_+_}@cd ${.CURDIR}; \
 		${MAKE} -f Makefile.inc1 \
-			DESTDIR=${KSTAGEDIR} \
-			PKG_VERSION=${PKG_VERSION} DISTDIR=kernel \
+			DESTDIR=${KSTAGEDIR}/kernel \
+			PKG_VERSION=${PKG_VERSION} DISTDIR=. \
 			SOURCE_DATE_EPOCH=${SOURCE_DATE_EPOCH} \
 			create-kernel-packages
 
