rc: Move rc.d/syslogd into syslogd package
PR:		282324
Sponsored by:	The FreeBSD Foundation
Differential Revision: https://reviews.freebsd.org/D50076

--- a/libexec/rc/rc.d/Makefile
+++ b/libexec/rc/rc.d/Makefile
@@ -109,6 +109,10 @@ CONFGROUPS+=		RESOLVCONF
 RESOLVCONF=		resolv
 RESOLVCONFPACKAGE=	resolvconf
 
+CONFSGROUPS+=		SYSLOGD
+SYSLOGD=		syslogd
+SYSLOGDPACKAGE=		syslogd
+
 CONFGROUPS+=		CRON
 CRON+=			cron
 CRONPACKAGE=		cron
