Revert "Makefile.inc1: stage world and kernel into final layout"
This reverts commit f82f0c2de351f2fdef0860668666e54ed3c49bf0.

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -172,7 +172,7 @@ task:
   - su user -c "make WITHOUT_TOOLCHAIN=yes packages"
 
   package_check_script:
-  - su user -c "/usr/libexec/flua tools/pkgbase/metalog_reader.lua -v -c /usr/obj/$(pwd -P)/${TARGET}.${TARGET_ARCH}/stage/METALOG"
+  - su user -c "/usr/libexec/flua tools/pkgbase/metalog_reader.lua -v -c /usr/obj/$(pwd -P)/${TARGET}.${TARGET_ARCH}/worldstage/METALOG"
 
   # XXX this is not run if the above fails
   cat_metalog_script:
