Revert "Makefile.inc1: Avoid use of DISTDIR in one spot"
This reverts commit 3397d938284d8b9f73e46318efce07596adeefcd.

--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -2104,8 +2104,8 @@ create-packages-world:	_pkgbootstrap _repodir .PHONY
 create-packages-kernel:	_pkgbootstrap _repodir .PHONY
 	${_+_}@cd ${.CURDIR}; \
 		${MAKE} -f Makefile.inc1 \
-			DESTDIR=${KSTAGEDIR}/kernel \
-			PKG_VERSION=${PKG_VERSION} DISTDIR=. \
+			DESTDIR=${KSTAGEDIR} \
+			PKG_VERSION=${PKG_VERSION} DISTDIR=kernel \
 			SOURCE_DATE_EPOCH=${SOURCE_DATE_EPOCH} \
 			create-kernel-packages
 
