vt fonts: Add Terminus size 16 font
This matches the font compiled into the kernel.  Include it in
share/vt/fonts for consistency.

Event:		Kitchener-Waterloo Hackathon 202506
Sponsored by:	The FreeBSD Foundation
Differential Revision:

--- a/share/vt/fonts/Makefile
+++ b/share/vt/fonts/Makefile
@@ -10,6 +10,7 @@ FONTS=	comic-8x14.fnt \
 	spleen-12x24.fnt \
 	spleen-16x32.fnt \
 	spleen-32x64.fnt \
+	terminus-b16n.fnt \
 	terminus-b32.fnt \
 	tom-thumb.fnt \
 	vgarom-8x8.fnt \
