--- a/etc/mtree/BSD.var.dist
+++ b/etc/mtree/BSD.var.dist
@@ -2,7 +2,7 @@
 # Please see the file src/etc/mtree/README before making changes to this file.
 #
 
-/set type=dir uname=root gname=wheel mode=0755 tags=package=runtime
+/set type=dir uname=root uid=0 gname=wheel gid=0 mode=0755 tags=package=runtime
 .
     account             mode=0750
     ..
